--- a/DELAPAU/style.css
+++ b/DELAPAU/style.css
@@ -15,7 +15,8 @@ body{background:#222; font-family: Futura, "Trebuchet MS", Arial, sans-serif;
 .slideshow img { 
     max-width: 480px; 
     width: 79%; 
-    margin-top: 50px;}
+    margin-top: 50px;
+    padding:0.5em;}
 
 nav ul { 
     list-style-type: none; 
