--- a/bootstrap-3.3.7-dist/carousel.css
+++ b/bootstrap-3.3.7-dist/carousel.css
@@ -1,7 +1,7 @@
 body {;
     color: #5a5a5a;}
 
-h1{font-family: 'Julius Sans One', sans-serif; font-size: 80px}
+h1{font-family: 'Julius Sans One', sans-serif; font-size: 80px;}
 
 .navbar-wrapper {
   position: absolute;
